# Pumpkin

experiments/: analyse_results.py  generate_instances.py  pyproject.toml  run_experiments.py
experiments/benchmarks/tsp/: burma14.mzn  tsp_medium.mzn
experiments/scripts/: tsp_to_mzn.py
pumpkin-crates/constraints/src/constraints/: all_different.rs
pumpkin-crates/propagators/src/propagators/all_different/: checker.rs  mod.rs  propagator.rs
pumpkin-crates/propagators/src/propagators/circuit/: propagator.rs
